tests/neg-macros/splice-in-top-level-splice-2.scala
import scala.quoted.{_, given}

object Foo {
  inline def foo(): Int = ${$x} // error
  def x(given QuoteContext): Expr[Expr[Int]] = '{ '{1} }
}
